<?xml version="1.0"?>
<package>
  <name>rosban_utils</name>
  <version>0.0.0</version>
  <description>A package containing various utilities about strings, timestamps, reading files etc...</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tinyxml</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>tinyxml</run_depend>

  <export>
  </export>
</package>
